# robinson

./: .gitattributes  Cargo.toml  README.md  build.rs
.github/workflows/: check.yaml  miri.yaml  test.yaml
benches/: parse.rs
benches/inputs/: attributes.py  attributes.xml  cdata.py  cdata.xml  gigantic.xml  text.py  text.xml  tiny.xml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
src/: attributes.rs  error.rs  lib.rs  memchr.rs  namespaces.rs  nodes.rs  parser.rs  strings.rs  tokenizer.rs
src/serde/: mod.rs  raw_node.rs
tests/: entity_resolver.rs  parse.rs
tests/inputs/: attribute_values.xml  attributes.xml  billion_laughs_attribute_value.xml  billion_laughs_element.xml  cdata.xml  children.xml  comment.xml  crlf_via_char.xml  crlf_via_entity.xml  declaration.xml  declaration_pi.xml  entity_reference_attribute_value.xml  entity_reference_element.xml  invalid_reference_hexcode.xml  namespace_close_element.xml  overwrite_namespace.xml  pi.xml  public_doctype.xml  text.xml  text_entity_interleaved.xml  unclosed_root_element.xml  unknown_namespace_empty.xml  xml_namespace.xml
tests/outputs/: attribute_values.dbg  attributes.ast  billion_laughs_attribute_value.ast  billion_laughs_element.ast  cdata.ast  children.ast  comment.dbg  crlf_via_char.ast  crlf_via_entity.ast  entity_reference_attribute_value.dbg  entity_reference_element.dbg  invalid_reference_hexcode.ast  missing_root_element.ast  namespace_close_element.ast  overwrite_namespace.dbg  public_doctype.dbg  text.ast  text_entity_interleaved.ast  unclosed_root_element.dbg  unknown_namespace_empty.ast  xml_namespace.dbg
