[package]
name = "robinson"
description = "For when you go to a lonely island and survival depends on parsing XML."
authors = ["Adam Reichold <adam.reichold@t-online.de>", "Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["xml", "parser", "tree", "dom"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/robinson"
readme = "README.md"
exclude = ["benches"]
repository = "https://github.com/adamreichold/robinson"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
memchr = "2"

[dev-dependencies]
pretty_assertions = "1"

[workspace]
members = ["fuzz"]

[profile.release]
codegen-units = 1
lto = true
debug = true
