[package]
name = "robinson"
description = "For when you go to a lonely island and survival depends on parsing XML."
authors = ["Adam Reichold <adam.reichold@t-online.de>", "Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["xml", "parser", "tree", "dom"]
categories = ["parser-implementations"]
documentation = "https://docs.rs/robinson"
readme = "README.md"
exclude = ["benches"]
repository = "https://github.com/adamreichold/robinson"
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2024"

[features]
serde = ["dep:bit-set", "dep:serde"]
raw-node = ["serde"]

[dependencies]
bit-set = { version = "0.8", optional = true }
memchr = "2"
serde = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["fuzz"]

[profile.release]
codegen-units = 1
lto = true
debug = true
